[GC] Finished refactoring Server Agent